--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/estilos.css">
     <script type="text/javascript"></script>
-    <title>CRUD aPP REGISTRO DE DATOS DE PEDIDOS DE STOCK</title>
+    <title>CRUD aPP REGISTRO DE DATOS DE PEDIDOS</title>
 </head>
 
 <body>
     <main class="contenedor">
         <section class="crud">
-            <h1 class="titulocrud">Registro de Pedidos de Stock</h1>
+            <h1 class="titulocrud">Registro de Pedidos</h1>
             <button type="submit" id="botonAdd" class="botonadd"></button>
 
             <!-- Formulario 1 Pedidos stock, etiquetas con id -->
             <form id="formRegistro" class="formucrud hidden">
                 <select place id="entradainput" class="formInput">
-                    <option style="color: rgb(176, 176, 176);" value="">Origen del pedido</option>
+                    <option style="color: rgb(176, 176, 176);" value="">Origen pedido</option>
                     <option value="Web">Web</option>
                     <option value="Ventas">Ventas</option>
                     <option value="Administrador">Administrador</option>
@@ -65,8 +65,8 @@
                         <th class="table_header">Cliente</th>
                         <th class="table_header">Cantidad</th>
                         <th class="table_header">Detalle de pedido</th>
-                        <th class="table_header">Envio</th>
-                        <th class="table_header">Facturacion</th>
+                        <th class="table_header">Envío</th>
+                        <th class="table_header">Facturación</th>
                         <th class="table_header"></th>
                     </tr>
                 </thead>
