correccion de rutas

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Borel&family=Cinzel:wght@400;500;600;700;800;900&family=Merriweather:wght@300&family=Quicksand:wght@300;400;500;600;700&family=Roboto&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="./estilos.css">
     <script type="text/javascript"></script>
     <title>CRUD aPP REGISTRO DE DATOS DE PEDIDOS</title>
 </head>
 
 <body>
+<div  class="navbar"  style="height: 80px; width: 100%;">hola</div>
     <main class="contenedor">
+        
         <section class="crud">
             <h1 class="titulocrud">Registro de Pedidos</h1>
             <button type="submit" id="botonAdd" class="botonadd"></button>
@@ -76,7 +77,7 @@
             </table>
         </section>
     </main>
-    <script src="./js/crud.js"></script>
+    <script src="./crud.js"></script>
 </body>
 
 </html>
