navbar e imagenes decorativas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <title>CRUD aPP REGISTRO DE DATOS DE PEDIDOS</title>
 </head>
 <header>
-    <div class="navbar">hola</div>
+    <div class="navbar">
+        <div class="slot1 navitem"><img class="logofalso" src="./public/assets/img/logofalso.png" alt=""> <span class="textlogo">Manos del Marga Marga</span></div>
+        <span class="navitem navitem">Imprenta</span>
+        <span class="navitem">Stock</span>
+        <span class="navitem">Facturas</span>
+        <span class="navitem">Datos clientes</span>
+        <span class="navitem">Tareas</span>
+        <div class="slot7 navitem"><img class="userfake" src="./public/assets/img/usuario.png" alt=""> <span>Cuenta</span></div>
+        
+    </div>
 </header>
 
 <body>
@@ -22,7 +31,6 @@
     <section class="crud">
         <span class="titulocrud">Registro de Pedidos</span>
         <button type="submit" id="botonAdd" class="botonadd"></button>
-
         <!-- Formulario 1 Pedidos stock, etiquetas con id -->
         <form id="formRegistro" class="formucrud hidden">
             <select place id="entradainput" class="formInput">
