correccion navbar para telefono

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <div class="navbar">
         <div class="slot1 navitem"><img class="logofalso" src="./public/assets/img/logofalso.png" alt=""> <span class="textlogo">Manos del Marga Marga</span></div>
         <span class="navitem navitem">Imprenta</span>
-        <span class="navitem">Stock</span>
         <span class="navitem">Facturas</span>
-        <span class="navitem">Datos clientes</span>
+        <span class="navitem">Clientes</span>
         <span class="navitem">Tareas</span>
         <div class="slot7 navitem"><img class="userfake" src="./public/assets/img/usuario.png" alt=""> <span>Cuenta</span></div>
         
