--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>CRUD aPP REGISTRO DE DATOS DE PEDIDOS</title>
 </head>
 <header>
+    <!-- barra superior de navegacion decorativa -->
     <div class="navbar">
         <div class="slot1 navitem"><img class="logofalso" src="./public/assets/img/logofalso.png" alt=""> <span class="textlogo">Manos del Marga Marga</span></div>
         <span class="navitem navitem">Imprenta</span>
