resize de icono user

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <header>
     <!-- barra superior de navegacion decorativa -->
     <div class="navbar">
-        <div class="slot1 navitem"><img class="logofalso" src="./public/assets/img/logofalso.png" alt=""> <span class="textlogo">Manos del Marga Marga</span></div>
+        <div class="slot1 navitem"><img class="logofalso" src="./public/assets/img/logofalso.png" alt=""> <span
+                class="textlogo">Manos del Marga Marga</span></div>
         <span class="navitem navitem">Imprenta</span>
         <span class="navitem">Facturas</span>
         <span class="navitem">Clientes</span>
         <span class="navitem">Tareas</span>
-        <div class="slot7 navitem"><img class="userfake" src="./public/assets/img/usuario.png" alt=""> <span>Cuenta</span></div>
-        
+        <div class="slot7 navitem"><img class="userfake" src="./public/assets/img/usuario.png" alt="">
+            <span>Cuenta</span></div>
+
     </div>
 </header>
 
